20386
- Start with a valid string literal which compiles.
- Prefix with `s`
- The compilation then fails
```scala
scala> val N = "00"
N: String = 00

scala> "\"N\" : \"$N\""
res1: String = "N" : "$N"

scala> s"\"N\" : \"$N\""
<console>:1: error: ';' expected but string literal found.
s"\"N\" : \"$N\""
      ^
```
